fix for touch not working as intended on mobile

--- a/app/assets/stylesheets/components/_filters.scss
+++ b/app/assets/stylesheets/components/_filters.scss
@@ -35,11 +35,12 @@
 
   .filter-header {
     padding-bottom: .5rem;
+    justify-content: space-evenly;
   }
 
   .filter-header h2 {
     margin-bottom: 0.5rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
 }
